--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,6 @@
 
 <body class="image-background">
 
-  <header>
-
-  </header>
-
   <div class="container-fluid">
     <div class="row height-100 justify-content-center align-items-center">
       <div class="col-11 col-md-6 d-block" id="view-1">
@@ -49,14 +45,14 @@
       </div>
 
       <div class="col-11 col-md-6 d-none" id="view-3">
-        <p id="1"></p>
-        <p id="2"></p>
-        <p id="3"></p>
-        <p id="4"></p>
-        <p id="5"></p>
-        <p id="6"></p>
-        <p id="7"></p>
-        <p id="8"></p>        
+        <p class="text-justify"><b>Monday</b> <span id="1"></span></p>
+        <p><b>Tuesday</b> <span id="2"></span></p>
+        <p><b>Wednesday</b> <span id="3"></span></p>
+        <p><b>Thursday</b> <span id="4"></span></p>
+        <p><b>Friday</b> <span id="5"></span></p>
+        <p><b>Saturday</b> <span id="6"></span></p>   
+        <p><b>Sunday</b> <span id="7"></span></p>  
+        <p><b>Monday</b> <span id="8"></span></p>          
         <div class="row">
           <button type="button" class="btn btn-success my-3" id="btn-back">Regresar</button>
         </div>
