centrando parrafo view3

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
         </div>
       </div>
 
-      <div class="col-11 col-md-6 d-none" id="view-3">
-        <p class="text-justify"><b>Monday</b> <span id="1"></span></p>
+      <div class="col-11 col-md-6 d-none text-center" id="view-3">
+        <p><b>Monday</b> <span id="1"></span></p>
         <p><b>Tuesday</b> <span id="2"></span></p>
         <p><b>Wednesday</b> <span id="3"></span></p>
         <p><b>Thursday</b> <span id="4"></span></p>
@@ -53,7 +53,7 @@
         <p><b>Saturday</b> <span id="6"></span></p>   
         <p><b>Sunday</b> <span id="7"></span></p>  
         <p><b>Monday</b> <span id="8"></span></p>          
-        <div class="row">
+        <div class="row justify-content-center">
           <button type="button" class="btn btn-success my-3" id="btn-back">Regresar</button>
         </div>
       </div>
