--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
       <div class="col-11 col-md-6 d-none" id="view-2">
         <figure>
-          <img src="" class="img-fluid">
+          <img src="" id "icons" class="img-fluid">
         </figure>
         <h3 id="weather" class="text-center"></h3>
         <p class="text-center">Clima:
