--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
       </div>
 
       <div class="col-11 col-md-6 d-none" id="view-2">
-        <figure>
-          <img src="" id "icons" class="img-fluid">
+        <figure class="row justify-content-center">
+          <!-- <img src="assets/images/cloudy.png" id="icons" class="img-fluid"> -->
+          <img src="" id="icons" class="img-fluid icon-weather">
+          <!-- <p id="icons"></p> -->
         </figure>
         <h3 id="weather" class="text-center"></h3>
         <p class="text-center">Clima:
