--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
         </div>
       </div>
 
-      <div class="col-11 col-md-6 d-none" id="view-2">
+      <div class="col-12 col-md-7 d-none height-80 mx-3" id="map">
+      </div>
+
+      <div class="col-11 col-md-4 d-none" id="view-2">
         <figure>
           <img src="" class="img-fluid">
         </figure>
@@ -44,7 +47,7 @@
         </div>
       </div>
 
-      <div class="col-11 col-md-6 d-none text-center" id="view-3">
+      <div class="col-11 col-md-4 d-none text-center" id="view-3">
         <p><b>Monday</b> <span id="1"></span></p>
         <p><b>Tuesday</b> <span id="2"></span></p>
         <p><b>Wednesday</b> <span id="3"></span></p>
@@ -60,7 +63,8 @@
     </div>
   </div>
 
-
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVy9sxy4dToErPKrImIhj5wRStDXAVK44&callback=initMap">
+  </script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
