--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
       <div class="col-11 col-md-4 d-none" id="view-2">
         <figure>
-          <img src="" id="icons" class="img-fluid">
+          <img src="" id="icons" class="img-fluid icons-weather">
         </figure>
         <h3 id="weather" class="text-center"></h3>
         <p class="text-center">Clima:
