--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,13 @@
           <button type="button" class="btn btn-success" id="btn-get-weather">Obtener el clima</button>
         </div>
       </div>
-
-      <div class="col-12 col-md-7 d-none height-80 mx-3" id="map">
+      <div class="col-12 col-md-7">
+        <div class="col-10 col-md-12 d-none search-weather" id = "input-search">
+            <input class="form-control" type="text" placeholder="Ingresa una ubicación">
+        </div> 
+       <div class=" d-none height-80 mx-3" id="map">
+        </div>
       </div>
-
       <div class="col-11 col-md-4 d-none" id="view-2">
         <figure>
           <img src="" id="icons" class="img-fluid icons-weather">
