--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,12 @@
       
       <div class="col-12 col-md-7">
         <form class="d-none" id = "box-search">
-          <h2 class="ml-3"> Sky Weather</h2>
+          <div class="mb-4">
+            <img src="assets/images/frost.png" width="65"class="d-inline" alt="termometro">
+            <h2 class="ml-3 d-inline"> Sky Weather</h2>
+          </div>
           <div class="form-row">
-            <div class="col-6 col-md-8 mx-sm-3 search-weather">
+            <div class="col-6 col-md-8 ml-3 search-weather">
               <input class="form-control" type="text" id="input-search" placeholder="Ingresa una ubicación">
             </div>
             <div class="col-3 col-md-2">
