--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       </div>
 
       <div class="col-11 col-md-4 d-none text-center" id="view-3">
-        <h4>Pronóstico de la Semana</h4>
+        <h4 class="mb-5">Pronóstico de la Semana</h4>
         <p><b>Monday</b> <span id="1"></span></p>
         <p><b>Tuesday</b> <span id="2"></span></p>
         <p><b>Wednesday</b> <span id="3"></span></p>
