subiendo cambios mobile

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body class="image-background">
 
   <div class="container-fluid">
-    <div class="row height-100 justify-content-center align-items-center">
+    <div class="row mt-4 justify-content-center align-items-center">
       <div class="col-11 col-md-6 d-block" id="view-1">
         <h2 class="text-center my-3">Bienvenido a
           <span>Weather</span>, descubre como estará el clima en tu ciudad</h2>
@@ -28,14 +28,6 @@
           <div class="mb-4">
             <img src="assets/images/frost.png" width="65"class="d-inline" alt="termometro">
             <h2 class="ml-3 d-inline"> Sky Weather</h2>
-          </div>
-          <div class="form-row">
-            <div class="col-6 col-md-8 ml-3 search-weather">
-              <input class="form-control" type="text" id="input-search" placeholder="Ingresa una ubicación">
-            </div>
-            <div class="col-3 col-md-2">
-              <button type="button" class="btn btn-success mb-2">Ver ubicación</button>
-            </div>
           </div>
         </form>
        <div class=" d-none height-80 mx-3" id="map">
