--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>WEATHER</title>
+  <link rel="stylesheet" href="public/vendors/bootstrap/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Source+Sans+Pro" rel="stylesheet">
+  <link rel="stylesheet" href="public/css/main.css">
+  <title>EDWeather</title>
 </head>
-<body>
-  <script src="public/js/redirect.js"></script>
+
+<body class="image-background">
+
+  <div class="container-fluid">
+    <div class="row mt-4 justify-content-center align-items-center">
+      <div class="col-11 col-md-6 d-block" id="view-1">
+        <h2 class="text-center my-3">Bienvenido a
+          <span>Weather</span>, descubre como estará el clima en tu ciudad</h2>
+        <div class="row justify-content-center">
+          <button type="button" class="btn btn-success" id="btn-get-weather">Obtener el clima</button>
+        </div>
+      </div>
+      
+      <div class="col-12 col-md-7">
+        <form class="d-none" id = "box-search">
+          <div class="mb-4">
+            <img src="public/assets/images/frost.png" width="65"class="d-inline" alt="termometro">
+            <h2 class="ml-3 d-inline"> Sky Weather</h2>
+          </div>
+        </form>
+       <div class=" d-none height-80 mx-3" id="map">
+        </div>
+      </div>
+      <div class="col-11 col-md-4 d-none" id="view-2">
+        <figure>
+          <img src="" id="icons" class="img-fluid icons-weather">
+        </figure>
+        <h3 id="weather" class="text-center"></h3>
+        <p class="text-center">Clima:
+          <span id="summary"></span>
+        </p>
+        <p class="text-center">Viento:
+          <span id="wind"></span>
+        </p>
+        <p class="text-center">Humedad:
+          <span id="humidity"></span>
+        </p>
+        <p class="text-center">Presión:
+          <span id="pressure"></span>
+        </p>
+        <div class="row justify-content-center">
+          <button type="button" class="btn btn-success my-3" id="btn-weather-week">Ver pronóstico de la semana</button>
+        </div>
+      </div>
+
+      <div class="col-11 col-md-4 d-none text-center" id="view-3">
+        <h4 class="mb-5">Pronóstico de la Semana</h4>
+        <p><b>Monday</b> <span id="1"></span></p>
+        <p><b>Tuesday</b> <span id="2"></span></p>
+        <p><b>Wednesday</b> <span id="3"></span></p>
+        <p><b>Thursday</b> <span id="4"></span></p>
+        <p><b>Friday</b> <span id="5"></span></p>
+        <p><b>Saturday</b> <span id="6"></span></p>   
+        <p><b>Sunday</b> <span id="7"></span></p>  
+        <p><b>Monday</b> <span id="8"></span></p>          
+        <div class="row justify-content-center">
+          <button type="button" class="btn btn-success my-3" id="btn-back">Regresar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVy9sxy4dToErPKrImIhj5wRStDXAVK44&callback=initMap"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="public/vendors/bootstrap/js/bootstrap.min.js"></script>
+  <script src="public/js/app.js"></script>
 </body>
+
 </html>
